0025851: Visualization, TKOpenGl - do not use FBO cache when GLSL is unavailable